[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "govcheck"
version = "0.1.0"
description = "Governance document hierarchy checker"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
]

[project.scripts]
govcheck = "govcheck.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["govcheck*"]
